removed margin from footer links to fix overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,6 @@ body {
 footer {
   height: 150px;
   text-align: center;
-  
 }
 
 .footer-contact li, .footer-nav li {
@@ -80,8 +79,7 @@ footer {
 
 .footer-nav a {
   font-size: 90%;
-  margin: 1%;
-  padding: 3%;
+  padding: 0 3%;
 }
 
 footer p {
